--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "mcu-113-2-web-13131901-final": {
+    "shopping-cart": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
@@ -17,7 +17,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:application",
           "options": {
-            "outputPath": "dist/mcu-113-2-web-13131901-final",
+            "outputPath": "dist/shopping-cart",
             "index": "src/index.html",
             "browser": "src/main.ts",
             "polyfills": [
@@ -64,10 +64,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "buildTarget": "mcu-113-2-web-13131901-final:build:production"
+              "buildTarget": "shopping-cart:build:production"
             },
             "development": {
-              "buildTarget": "mcu-113-2-web-13131901-final:build:development"
+              "buildTarget": "shopping-cart:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -98,5 +98,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": false
   }
 }
